# aichallenge2021

./: .gitignore  DallaralL15_Autoware.Auto.json  README.md  README_EN.md  README_JAP.md  RULE.md  RULE_EN.md  setup_autoware.sh
autoware/: aderc
autoware/adehome/aichallenge_ws/src/aichallenge_eval/: CMakeLists.txt  package.xml
autoware/adehome/aichallenge_ws/src/aichallenge_eval/include/aichallenge_eval/: aichallenge_eval.hpp  aichallenge_eval_node.hpp  visibility_control.hpp
autoware/adehome/aichallenge_ws/src/aichallenge_eval/launch/: aichallenge_eval.launch.py
autoware/adehome/aichallenge_ws/src/aichallenge_eval/src/: aichallenge_eval.cpp  aichallenge_eval_node.cpp
autoware/adehome/aichallenge_ws/src/aichallenge_launch/: CMakeLists.txt  package.xml
autoware/adehome/aichallenge_ws/src/aichallenge_launch/data/: IndianapolisMotorSpeedway.osm  IndianapolisMotorSpeedway.pcd  IndianapolisMotorSpeedway.yaml
autoware/adehome/aichallenge_ws/src/aichallenge_launch/launch/: aichallenge.launch.py
autoware/adehome/aichallenge_ws/src/aichallenge_launch/msg/: ScoreData.msg
autoware/adehome/aichallenge_ws/src/aichallenge_launch/param/: lanelet2_map_provider.param.yaml  lgsvl_interface.param.yaml
autoware/adehome/aichallenge_ws/src/aichallenge_msgs/: CMakeLists.txt  package.xml
autoware/adehome/aichallenge_ws/src/aichallenge_msgs/msg/: ScoreData.idl  TimeData.idl
autoware/adehome/aichallenge_ws/src/aichallenge_submit/: create-tar-file.sh
autoware/adehome/aichallenge_ws/src/aichallenge_submit/aichallenge_sample/: CMakeLists.txt  package.xml
autoware/adehome/aichallenge_ws/src/aichallenge_submit/aichallenge_sample/include/aichallenge_sample/: aichallenge_sample.hpp  aichallenge_sample_node.hpp  visibility_control.hpp
autoware/adehome/aichallenge_ws/src/aichallenge_submit/aichallenge_sample/launch/: aichallenge_sample.launch.py  ms3_core.launch.py
autoware/adehome/aichallenge_ws/src/aichallenge_submit/aichallenge_sample/param/: behavior_planner.param.yaml  map_publisher.param.yaml  mpc.param.yaml  pc_filter_transform.param.yaml
autoware/adehome/aichallenge_ws/src/aichallenge_submit/aichallenge_sample/src/: aichallenge_sample.cpp  aichallenge_sample_node.cpp
autoware/adehome/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/: CMakeLists.txt  package.xml
autoware/adehome/aichallenge_ws/src/aichallenge_submit/aichallenge_submit_launch/launch/: aichallenge_submit_launch.launch.py
autoware/adehome/aichallenge_ws/src/aichallenge_submit/gnss_localizer/: CMakeLists.txt  package.xml
autoware/adehome/aichallenge_ws/src/aichallenge_submit/gnss_localizer/include/gnss_localizer/: gnss_localizer.hpp  gnss_localizer_node.hpp  visibility_control.hpp
autoware/adehome/aichallenge_ws/src/aichallenge_submit/gnss_localizer/launch/: gnss_localizer.launch.py
autoware/adehome/aichallenge_ws/src/aichallenge_submit/gnss_localizer/src/: gnss_localizer.cpp  gnss_localizer_node.cpp
autoware/adehome/aichallenge_ws/src/aichallenge_submit/gnss_localizer/test/: test_gnss_localizer.cpp
autoware/adehome/aichallenge_ws/src/aichallenge_submit/sample_localizer/: CMakeLists.txt  package.xml
autoware/adehome/aichallenge_ws/src/aichallenge_submit/sample_localizer/include/sample_localizer/: sample_localizer.hpp  sample_localizer_node.hpp  visibility_control.hpp
autoware/adehome/aichallenge_ws/src/aichallenge_submit/sample_localizer/launch/: sample_localizer.launch.py
autoware/adehome/aichallenge_ws/src/aichallenge_submit/sample_localizer/src/: sample_localizer.cpp  sample_localizer_node.cpp
autoware/adehome/aichallenge_ws/src/vehicle_pose_publisher/: CMakeLists.txt  package.xml
autoware/adehome/aichallenge_ws/src/vehicle_pose_publisher/include/vehicle_pose_publisher/: vehicle_pose_publisher.hpp  vehicle_pose_publisher_node.hpp  visibility_control.hpp
autoware/adehome/aichallenge_ws/src/vehicle_pose_publisher/launch/: vehicle_pose_publisher.launch.py
autoware/adehome/aichallenge_ws/src/vehicle_pose_publisher/src/: vehicle_pose_publisher.cpp  vehicle_pose_publisher_node.cpp
autoware/docker/: Dockerfile
evaluation/: Dockerfile  build.sh  main.bash  run.sh
scenario/: scenario.train.py
scenario/data/: npc1.csv  npc2.csv  npc3.csv  npc4.csv  npc5.csv
