<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>aichallenge_launch</name>
    <version>1.0.0</version>
    <description>A package containing launch and configuration files for the Autoware AVP 2020 demo.</description>
    <maintainer email="josh.whitley@autoware.org">Joshua Whitley</maintainer>
    <license>Apache 2.0</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>
    <buildtool_depend>autoware_auto_cmake</buildtool_depend>    

    <!-- Building process will not be performed.-->
    <!-- This package is used for only launching.-->

    <depend>ament_index_python</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

    <exec_depend>aichallenge_submit_launch</exec_depend>
    <exec_depend>aichallenge_eval</exec_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <test_depend>launch_testing_ament_cmake</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
